# mcp-server-py2many

./: .gitignore  PROJECT.md  README.md  pyproject.toml
examples/: complex_llm_assisted.py  simple_deterministic.py
src/mcp_server_py2many/: __init__.py  __main__.py  server.py
